# uma-ev

./: .gitignore  README.md  ex.py  main.py  pbcopy  pyproject.toml  scraper.py
docs/: requirements-ja.md
html_parsers/: muryou_keiba_ai.py  netkeiba.py
odds2ev/: __init__.py  predictor.py  scraping.py  transforms.py  utils.py
parser/: netkeiba.py
scripts/: __init__.py  autogen_recipe_from_races.py  calc_goalcost.py  calc_perf_cost.py  fetch_date2netkeiba_race_id.py  fetch_factors_from_muryou_keiba_ai.py  fetch_pedigree_from_netkeiba.py  fetch_race.py  fetch_race_from_netkeiba.py  fetch_racecard.py  fetch_racecard_from_netkeiba.py  oldcli.py  prediction.py
scripts/docs/: design.md  todo.md
tests/: test_predictor.py
umaev/: calc.py  ops.py  predictor.py  scraping.py
