[project]
name = "netoke-odds2ev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
